--- a/styles.css
+++ b/styles.css
@@ -103,8 +103,52 @@ main {
     padding: 40px;
 }
 
-main h2 {
-    color: #333333; /* Burgundy */
+main h1 h2 {
+    margin: 1rem;
+    color: #8B0000;
+    padding: 1rem;
+    text-align: center; /* Burgundy */
+}
+
+p{
+    margin-bottom: 1rem;
+    font-size: 1.1rem; 
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 1rem;
+}
+
+th, td {
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    text-align: left;
+}
+
+th {
+    background-color: #e40d0d;
+    color: gold;
+}
+
+img.characters {
+    display: block;
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
+    margin: 20px auto;
+}
+
+video {
+    display: block;
+    margin: 20px auto;
+    width: 100%;
+}
+
+.description {
+    text-align: center;
+    margin-top: 1rem;
 }
 
 /* Menu Section styles */
@@ -127,8 +171,8 @@ main#gallery {
     box-sizing: border-box;
 }
 
-.gallery-item img{
-    max-width: 100%; /* Adjust the maximum width to control the size of the images */
+.image{
+    max-width: 50%; /* Adjust the maximum width to control the size of the images */
     height: auto;
     border-radius: 8px; /* Optional: Add rounded corners to the images */
 }
@@ -250,8 +294,27 @@ input[type="submit"]:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
+.video-container {
+    position: relative;
+    overflow: hidden;
+    max-width: 100%;
+}
+
+.video-container iframe {
+    width: 100%;
+    height: 100%;
+}
+
 /* Responsive styles */
 @media screen and (max-width: 768px) {
+
+    img.characters {
+        width: 100%;
+    }
+
+    video {
+        width: 100%;
+    }
 
     .hamburger{
         display: block;
