--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 header {
     background-color: #8B0000;
     color: #ca1919;
-    padding: 35px 20px; /* Add some padding for better spacing */
+    padding: 35px 20px; /* padding for better spacing */
 }
 
 /* Logo styles */
@@ -27,7 +27,7 @@ header {
 }
 
 .logo img {
-    max-height: 100px; /* Adjust the maximum height as needed */
+    max-height: 100px;
     vertical-align: middle; /* Align the logo vertically with the navbar */
 }
 
@@ -184,6 +184,12 @@ video {
     border-radius: 8px; 
 }
 
+.gallery p {
+    font-size: 1.2em;
+    line-height: 1.6;
+    color: #7a3333;
+    
+}
 /* About Us Section styles */
 
 body {
