--- a/styles.css
+++ b/styles.css
@@ -172,24 +172,25 @@ video {
 
 /* Gallery Section styles */
 
-#gallery {
+main#gallery {
     display: flex;
     flex-wrap: wrap;
-    justify-content: left;
+    justify-content: space-around;
 }
 
-.image-gallery{
-    max-width: 10%; 
+.gallery-item {
+    width: 40%; /* Adjust as needed based on your layout preferences */
+    margin-bottom: 20px;
+    box-sizing: border-box;
+}
+
+.gallery-item img{
+    max-width: 100%; /* Adjust the maximum width to control the size of the images */
     height: auto;
-    border-radius: 8px; 
+    border-radius: 8px; /* Optional: Add rounded corners to the images */
 }
 
-.gallery p {
-    font-size: 1.2em;
-    line-height: 1.6;
-    color: #7a3333;
-    
-}
+
 /* About Us Section styles */
 
 body {
