--- a/styles.css
+++ b/styles.css
@@ -326,7 +326,7 @@ input[type="submit"]:hover {
 
 /* Responsive styles */
 @media screen and (max-width: 768px) {
-
+/* Styles for smaller screens */
     img.characters {
         width: 100%;
     }
